Add batch compilation test cases